# tinymux

./: .gitattributes  .gitignore  AGENTS.md  ALPHA  BETA  CHANGES  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTIONS  GANL_INTEGRATION_STEPS.md  GEMINI.md  INSTALL  INTEGRATIONPLAN.md  ISSUES.md  LICENSE  Makefile  NOTES  README  README.COMPRESSION  README.GUESTS  README.MEMORY  README.TOOLS  SGP  TOC.patchable  TOC.removed  announce.txt  announce.txt.asc  branching  doit.sh  dounix.sh  dowin32.sh  foo.txt  iannotes
client/tf/: CLAUDE.md  CMakeLists.txt  ISSUES.md  README.md
client/tf/src/: app.h  charset.cpp  charset.h  command.cpp  command.h  connection.cpp  connection.h  hydra_connection.cpp  hydra_connection.h  iconnection.h  input.h  input_lex.cpp  input_lex.rl  keybind.cpp  keybind.h  macro.cpp  macro.h  main.cpp  regex_utils.cpp  regex_utils.h  restart.cpp  restart.h  script.h  script_lex.cpp  script_lex.rl  script_parse.cpp  spawn.cpp  spawn.h  terminal.cpp  terminal.h  timer.cpp  timer.h  world.cpp  world.h
client/tf/tf-lib/: stdlib.tf
ganl/: .gitignore  CLAUDE.md  Makefile.am  configure.ac  ganl.sln  ganl.vcxproj  ganl.vcxproj.filters  windows_project_info.txt
ganl/docs/: networkspec.md
ganl/include/ganl/: connection.h  network_engine.h  protocol_handler.h  secure_transport.h  session_manager.h
ganl/src/: Makefile.am
ganl/src/common/: Makefile.am  connection.cpp  io_buffer.cpp
ganl/test/: Makefile.am
ganl/tools/: Makefile.am
mux/: .depend  .gitignore  ALPHA  ALPHA.md  ATTACK  ATTACK.md  BETA  BETA.md  CHANGES  CHANGES.md  INSTALL  INSTALL.md  LOCAL  LOCAL.md  MODULES  MODULES.md  Makefile.am  Makefile.in  NOTES  NOTES.md  README  README.md  REALITY  REALITY.SETUP  REALITY.SETUP.md  REALITY.md  SGP  SGP.md  SQL  SQL.md  SSL  SSL.md  UPGRADING.md  buildnum.sh  configure  configure.ac  libmux.vcxproj  libmux.vcxproj.filters  netmux.sln  netmux.vcxproj  (+3 more)
mux/announce/: Makefile.am  Makefile.in
mux/convert/: .gitignore  README  configure  configure.ac  omega.cpp  omega.h  p6h.ll  p6h.ypp  p6hgame.cpp  p6hgame.h  p6hl.ypp  r7h.ypp  r7hgame.cpp  r7hgame.h  r7hl.ll  r7hl.ypp  t5x.ll  t5x.ypp  t5xgame.cpp  t5xgame.h  t5xl.ll  t5xl.ypp  t6h.ypp  t6hgame.cpp  t6hgame.h  t6hl.ypp
mux/docs/: BACKUPS  BACKUPS.md  BuildPDF  CHANGES.1.6  COMPRESSION  CONFIGURATION  CONFIGURATION.md  CONVERSION  CONVERSION.md  CREDITS  CREDITS.1.6  CREDITS.md  DISTRIBUTIONS  DISTRIBUTIONS.md  GUESTS  GUESTS.md  HISTORY.md  LIMITS  LIMITS.md  MEMORY  PATCHES  PATCHES.md  REALMS  REALMS.md  latticeS.ps  muxman.tex
mux/game/: Backup  Smoke  Startmux  Startmux.bat  Startmux.wsf  _backupflat.sh  alias.conf  compat.conf  mux.config  muxconfig.vbs  muxssl.cnf  netmux.conf  startmux.wsf
mux/game/data/: db_check  (+6 more)
mux/ganl/: ISSUES.md  Makefile.am  Makefile.in  ganl.vcxproj  ganl.vcxproj.filters
mux/include/: _build.h  alloc.h  ansi.h  ast.h  attrcache.h  attrs.h  autoconf-win32.h  autoconf.h.in  color_ops.h  command.h  comsys.h  config.h  copyright.h  core.h  dbt.h  dbt_compile.h  dbt_decoder.h  dbt_elf64.h  dbt_emit_a64.h  dbt_emit_x64.h  dbt_host.h  dbt_internal.h  dbt_interp.h  dbt_jit_mem.h  dbutil.h  driverstate.h  ducet_cetable.h  engine_api.h  externs.h  file_c.h  flags.h  functions.h  funmath.h  ganl_adapter.h  hir.h  interface.h  mail.h  mathutil.h  mdbx_backend.h  modules.h  (+14 more)
mux/lib/: ISSUES.md  Makefile.am  Makefile.in  alarm.cpp  alloc.cpp  color_ops.c  color_ops.rl  date_scan.cpp  date_scan.rl  dbutil.cpp  libmux.cpp  mathutil.cpp  sha1.cpp  stringutil.cpp  strtod.cpp  svdhash.cpp  svdrand.cpp  timedelta.cpp  timeparser.cpp  timeutil.cpp  timezone.cpp  unicode_tables.c  utf8_collate.cpp  utf8_grapheme.cpp  utf8_normalize.cpp  utf8tables.cpp
mux/libmdbx/: Makefile.am  Makefile.in
mux/lua54/: .gitignore  Makefile.am  Makefile.in  lua54.vcxproj  lua54.vcxproj.filters
mux/modules/: Makefile.am  Makefile.in
mux/muxescape/: .gitignore  Makefile.am  Makefile.in  muxescape.cpp
mux/proxy/: ISSUES.md  Makefile  Makefile.am  Makefile.in  account_manager.cpp  account_manager.h  back_door.cpp  back_door.h  base64.cpp  base64.h  config.cpp  config.h  crypto.cpp  crypto.h  front_door.cpp  front_door.h  grpc_server.cpp  grpc_server.h  grpc_web.cpp  grpc_web.h  hydra.conf.example  hydra.proto  hydra.service  hydra_log.cpp  hydra_log.h  hydra_main.cpp  hydra_types.h  process_manager.cpp  process_manager.h  proxy_regression.cpp  scrollback.cpp  scrollback.h  session_manager.cpp  session_manager.h  telnet_bridge.cpp  telnet_bridge.h  telnet_stream.cpp  telnet_stream.h  telnet_utils.h  utf8_utils.h  (+3 more)
mux/rv64/: Makefile  rv64blob.h  softlib.rv64
mux/script/: Makefile  Makefile.am  Makefile.in  mux_main.cpp  muxscript.vcxproj
mux/sqlite/: Makefile.am  Makefile.in
mux/src/: .depend  .gitignore  Doxyfile  ISSUES.md  Makefile.am  Makefile.in  _build.cpp  _build.h  a.cpp  alarm.cpp  alloc.cpp  alloc.h  analyse.pre  ansi.h  ast.cpp  ast.h  ast_scan.cpp  ast_scan.rl  attrcache.cpp  attrcache.h  attrs.h  autoconf-win32.h  autoconf.h  autoconf.h.in  boolexp.cpp  bsd.cpp  buildnum.sh  c-radix.cpp  command.cpp  command.h  complib.cpp  compresstab.h  comsys.cpp  comsys.h  conf.cpp  config.h  configure  configure.ac  configure.in  conn_bridge.cpp  (+185 more)
src/radixlib/: Makefile.in  a.c  complib.c  config.status  configure  configure.in  radix.c  radix.h
src/tools/: Makefile.in  configure  configure.in  histogrammer.pre  rawdump.cpp  report.pre
utf/: .gitignore  ConvertUTF.cpp  ConvertUTF.h  Makefile  Makefile.in  NumericDecimal.cpp  Printable.txt  PrivateUse.txt  StringprepProhibited.txt  UnicodeHan.txt  autoconf.h  autoconf.h.in  autoconf_win.h  buildDecompositions.pl  buildFiles.cpp  buildPrivateUse.pl  buildStringprepPrintable.pl  buildToLower.pl  buildToTitle.pl  buildToUpper.pl  buildUnicodeMaster.pl  build_win.cmd  cl_8859_1.txt  cl_8859_2.txt  cl_AttrName.txt  cl_AttrNameInitial.txt  cl_Color.txt  cl_ExtPict.txt  cl_Lower.txt  cl_ObjectName.txt  cl_PlayerName.txt  cl_Printable.txt  cl_Upper.txt  cl_ascii.txt  cl_hangul.txt  cl_hiragana.txt  cl_kanji.txt  cl_katakana.txt  classify.cpp  configure  (+34 more)
(+1450 files in other folders)
